--- a/application/templates/admin/edit.html
+++ b/application/templates/admin/edit.html
@@ -4,7 +4,7 @@
 {% block content %}
     <section class="container">
         <div class="columns">
-            <form action="{{ url_for('admin_bp.sst_admin_edit') }}" method="post">>
+            <form action="{{ url_for('admin_bp.sst_admin_edit') }}" method="post">
                 <div class="input">
                     {{ form.page_id.label }}
                     {{ form.page_id(placeholder='0000') }}
