--- a/ssfl/templates/base/nav.html
+++ b/ssfl/templates/base/nav.html
@@ -61,12 +61,12 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                    <a class="button is-primary">
-                        <strong>Sign up</strong>
-                    </a>
-                    <a class="button is-light">
-                        Log in
-                    </a>
+{#                    <a class="button is-primary">#}
+{#                        <strong>Sign up</strong>#}
+{#                    </a>#}
+{#                    <a class="button is-light">#}
+{#                        Log in#}
+{#                    </a>#}
                 </div>
             </div>
         </div>
