Add initial ability to publish plug-in to front page with mini-calendar. Create supporting query to retrieve data.

--- a/ssfl/templates/main/main.html
+++ b/ssfl/templates/main/main.html
@@ -6,24 +6,33 @@
     {% for item1 in snips %}        {# Each item corresponds to all stories horizontally across the page  #}
         <section class="is-mobile">
             <div class="container columns">
-                {% for item2 in item1 %}     {# Each item corresponds to all stories vertically in a cell #}
-                    <div class="column {{ item2.story['width-class'] }}">
-                        <div class="title is-4">{{ item2.story['title'] | safe }}</div>
-                        <figure>
-                            <img class="is-link"
-src="getimage/{{ item2.story['photo_url'] }}?w={{ item2.story['photo_shape'][0]}}&h={{ item2.story['photo_shape'][1]}}"
-                                 width="{{ item2.story['photo_shape'][0] }}"
-                                 height="{{ item2.story['photo_shape'][1] }}"
-                                 align="{{ item2.story['photo_align'] }}">
-                            <figcaption>{{ item2.story['photo_caption'] }}</figcaption>
-                        </figure>
-                        <div class="message-body">{{ item2.story['snip'] | safe }}</div>
-                        {% with button_type=item2.story['button_type'], target=item2.story['target'],
+                {% for item in item1 %}     {# Each item corresponds to all stories vertically in a cell #}
+                    {% if item.cell_type=='story' %}
+                        {%  set item2 = item.story %}
+                        <div class="column {{ item2.story['width-class'] }}">
+                            <div class="title is-4">{{ item2.story['title'] | safe }}</div>
+                            <figure>
+                                <img class="is-link"
+                                     src="getimage/{{ item2.story['photo_url'] }}?w={{ item2.story['photo_shape'][0] }}&h={{ item2.story['photo_shape'][1] }}"
+                                     width="{{ item2.story['photo_shape'][0] }}"
+                                     height="{{ item2.story['photo_shape'][1] }}"
+                                     align="{{ item2.story['photo_align'] }}">
+                                <figcaption>{{ item2.story['photo_caption'] }}</figcaption>
+                            </figure>
+                            <div class="message-body">{{ item2.story['snip'] | safe }}</div>
+                            {% with button_type=item2.story['button_type'], target=item2.story['target'],
                                 text_content=item2.story['text_content'],
                                 extra_styling=item2.story['extra_styling'] %}
-                            {% include 'base/button.html' %}
-                        {% endwith %}
-                    </div>
+                                {% include 'base/button.html' %}
+                            {% endwith %}
+                        </div>
+                    {% endif %}
+                    {% if item.cell_type=='calendar' %}
+                        {%  set item2 = item.calendar.cal_data %}
+                        <div class="column {{ item2['width-class'] }} message is-small">
+                        {% include 'main/calendar_plugin.html' %}
+                        </div>
+                    {% endif %}
                 {% endfor %}
             </div>
         </section>
