--- a/ssfl/templates/main/calendar.html
+++ b/ssfl/templates/main/calendar.html
@@ -3,68 +3,39 @@
 <head>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-    {% assets "css_bundle" %}
-        <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"></link>
-    {% endassets %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/bootstrap/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/core/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/daygrid/main.css">
+    <!--    {% assets "css_bundle" %}-->
+    <!--        <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"></link>-->
+    <!--    {% endassets %}-->
 
     <script
             src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
 
-    {% assets "js_bundle" %}
-        <script type="text/javascript" src="{{ ASSET_URL }}"></script>
-    {% endassets %}
+    <!--    {% assets "js_bundle" %}-->
+    <!--        <script type="text/javascript" src="{{ ASSET_URL }}"></script>-->
+    <!--    {% endassets %}-->
 
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/calendar.js') }}"></script>
+    <!--    <script type="text/javascript" src="{{ url_for('static', filename='dist/bundle.js') }}"></script>-->
+    <!--    <script type="application/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/bootstrap/main.js"></script>-->
+    <script type="application/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/core/main.js"></script>
+    <script type="application/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/daygrid/main.js"></script>
+    <!--    <script type="application/javascript" src="{{ url_for('static', filename='js/my_calendar.js') }}"></script>-->
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i"
           rel="stylesheet">
 
     <script>
-
-        $(document).ready(function () {
-            var date = new Date();
-            var d = date.getDate();
-            var m = date.getMonth();
-            var y = date.getFullYear();
-
-            /*  className colors
-
-            className: default(transparent), important(red), chill(pink), success(green), info(blue)
-
-            */
-
-
-            /* initialize the external events
-            -----------------------------------------------------------------*/
-
-            $('#external-events div.external-event').each(function () {
-
-                // create an Event Object (http://arshaw.com/fullcalendar/docs/event_data/Event_Object/)
-                // it doesn't need to have a start or end
-                var eventObject = {
-                    title: $.trim($(this).text()) // use the element's text as the event title
-                };
-
-                // store the Event Object in the DOM element so we can get to it later
-                $(this).data('eventObject', eventObject);
-
-                // make the event draggable using jQuery UI
-                $(this).draggable({
-                    zIndex: 999,
-                    revert: true,      // will cause the event to go back to its
-                    revertDuration: 0  //  original position after the drag
-                });
-
-            });
-
-
-            /* initialize the calendar
-            -----------------------------------------------------------------*/
-
-            var calendar = $('#calendar').fullCalendar({
+        document.addEventListener('DOMContentLoaded', function () {
+            var calendarEl = document.getElementById('calendar');
+            var calendar = new FullCalendar.Calendar(calendarEl, {
+                plugins: ['dayGrid'],
                 header: {
                     left: 'title',
                     center: 'agendaDay,agendaWeek,month',
@@ -73,24 +44,70 @@
                 editable: true,
                 firstDay: 0, //  1(Monday) this can be changed to 0(Sunday) for the USA system
                 selectable: true,
-                defaultView: 'month',
+                defaultView: 'dayGridMonth',
+                dateClick: function () {
+                    alert('a day has been clicked!');
+                },
+                eventMouseEnter: function (info) {
+                    // alert('Event: ' + info.event.title);
+                    // alert('Coordinates: ' + info.jsEvent.pageX + ',' + info.jsEvent.pageY);
+                    // alert('View: ' + info.view.type);
+
+                    // change the border color just for fun
+                    info.el.style.borderColor = 'red';
+                    let tmpnode = document.createElement('div');
+                    tmpnode.style.top = info.jsEvent.pageY - 20;
+                    tmpnode.style.left = info.jsEvent.pageX + 25;
+                    tmpnode.style.backgroundColor = 'red';
+                    tmpnode.style.opacity = '100%'
+                    tmpnode.setAttribute('class', 'event_popup');
+
+                    let tmpnode2 = document.createElement('div');
+                    tmpnode2.setAttribute('class', 'event_desc');
+                    tmpnode2.textContent = info.event.extendedProps.description;
+                    tmpnode.appendChild(tmpnode2);
+
+                    tmpnode2 = document.createElement('div');
+                    tmpnode2.setAttribute('class', 'event_cat');
+                    tmpnode2.textContent = info.event.extendedProps.categories;
+                    tmpnode.appendChild(tmpnode2);
+
+                    tmpnode2 = document.createElement('div');
+                    tmpnode2.setAttribute('class', 'event_aud');
+                    tmpnode2.textContent = info.event.extendedProps.audiences;
+                    tmpnode.appendChild(tmpnode2);
+
+                    info.el.appendChild(tmpnode);
+                },
+
+                eventMouseLeave: function (info) {
+                    info.el.lastChild.remove();
+                },
+
+                // popup_div.style.position = 'absolute'
+                // popup_div.style.display = 'block'
+                // popup_div.style.left = myLeft
+                // popup_div.style.top = myTop
+                // let tmp = tmpNode.getBoundingClientRect()
+                // popup_div.style.height = tmp.height + 'px'
 
                 axisFormat: 'h:mm',
                 columnFormat: {
                     month: 'ddd',    // Mon
                     week: 'ddd d', // Mon 7
-                    day: 'dddd M/d',  // Monday 9/7
+                    day: 'dddd M/D',  // Monday 9/7
                     agendaDay: 'dddd d'
                 },
                 titleFormat: {
-                    month: 'MMMM yyyy', // September 2009
-                    week: "MMMM yyyy", // September 2009
-                    day: 'MMMM yyyy'                  // Tuesday, Sep 8, 2009
+                    month: 'long',
+                    year: 'numeric', // September 2009
+                    day: 'numeric',
+                    weekday: 'long',
                 },
                 allDaySlot: false,
                 selectHelper: true,
                 select: function (start, end, allDay) {
-                    var title = prompt('Event Title:');
+                    let title = prompt('Event Title:');
                     if (title) {
                         calendar.fullCalendar('renderEvent',
                             {
@@ -132,80 +149,16 @@
                 eventsXX: [
                     {
                         title: 'Click for Google',
-                        start: new Date(y, m, 28),
-                        end: new Date(y, m, 29),
+                        // start: new Date(y, m, 28),
+                        // end: new Date(y, m, 29),
                         url: 'https://ccp.cloudaccess.net/aff.php?aff=5188',
                         className: 'success'
                     }
                 ],
             });
-
-
+            calendar.render();
         });
-
     </script>
-    <style>
-
-        body {
-            margin-bottom: 40px;
-            margin-top: 40px;
-            text-align: center;
-            font-size: 14px;
-            font-family: 'Roboto', sans-serif;
-            background: url(http://www.digiphotohub.com/wp-content/uploads/2015/09/bigstock-Abstract-Blurred-Background-Of-92820527.jpg);
-        }
-
-        #wrap {
-            width: 1100px;
-            margin: 0 auto;
-        }
-
-        #external-events {
-            float: left;
-            width: 150px;
-            padding: 0 10px;
-            text-align: left;
-        }
-
-        #external-events h4 {
-            font-size: 16px;
-            margin-top: 0;
-            padding-top: 1em;
-        }
-
-        .external-event { /* try to mimick the look of a real event */
-            margin: 10px 0;
-            padding: 2px 4px;
-            background: #3366CC;
-            color: #fff;
-            font-size: .85em;
-            cursor: pointer;
-        }
-
-        #external-events p {
-            margin: 1.5em 0;
-            font-size: 11px;
-            color: #666;
-        }
-
-        #external-events p input {
-            margin: 0;
-            vertical-align: middle;
-        }
-
-        #calendar {
-            /* 		float: right; */
-            margin: 0 auto;
-            width: 900px;
-            background-color: #FFFFFF;
-            border-radius: 6px;
-            box-shadow: 0 1px 2px #C3C3C3;
-            -webkit-box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.18);
-            -moz-box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.18);
-            box-shadow: 0px 0px 21px 2px rgba(0, 0, 0, 0.18);
-        }
-
-    </style>
 </head>
 <body>
 <div id='wrap'>
