Cleanup code, adjust buttons, headers for calendar

--- a/ssfl/templates/admin/nav.html
+++ b/ssfl/templates/admin/nav.html
@@ -19,8 +19,8 @@
                 Home
             </a>
 
-            <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='activities-index') }}">
-                DO STUFF
+            <a class="navbar-item" href="/main/calendar">
+                Calendar
             </a>
 
             <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='cool-stories-index') }}">
