--- a/ssfl/templates/main/calendar.html
+++ b/ssfl/templates/main/calendar.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/bootstrap/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/core/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/daygrid/main.css">
@@ -10,22 +9,17 @@
     <!--        <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"></link>-->
     <!--    {% endassets %}-->
 
-    <script
-            src="https://code.jquery.com/jquery-3.4.1.min.js"
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
 
-    <!--    {% assets "js_bundle" %}-->
-    <!--        <script type="text/javascript" src="{{ ASSET_URL }}"></script>-->
-    <!--    {% endassets %}-->
-
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+<!--    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>-->
 
     <script type="application/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/core/main.js"></script>
     <script type="application/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/daygrid/main.js"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/my_calendar.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/sst_javascript.js') }}"></script>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i"
           rel="stylesheet">
@@ -36,17 +30,15 @@
             let calendar = new FullCalendar.Calendar(calendarEl, {
                 plugins: ['dayGrid'],
                 header: {
-                    left: 'title, il_button, al_button',
-                    center: 'agendaDay,agendaWeek,month',
-                    right: 'evt_button, well_button, rel_button, club_button, prev,next today'
+                    left: 'il_button, al_button, evt_button, well_button, rel_button, club_button',
+                    center: 'title, dayGridMonth, dayGridWeek, dayGridDay',
+                    right: 'prev,next today '
                 },
-                editable: true,
+                editable: false,
+                themeSystem: 'standard',  //alternate is bootstrap and fontAwesome (include above)
                 firstDay: 0, //  1(Monday) this can be changed to 0(Sunday) for the USA system
                 selectable: true,
                 defaultView: 'dayGridMonth',
-                dateClick: function () {
-                    alert('a day has been clicked!');
-                },
                 customButtons: {
                     il_button: {
                         text: 'IL',
@@ -139,13 +131,6 @@
                     info.el.lastChild.remove();
                 },
 
-                // popup_div.style.position = 'absolute'
-                // popup_div.style.display = 'block'
-                // popup_div.style.left = myLeft
-                // popup_div.style.top = myTop
-                // let tmp = tmpNode.getBoundingClientRect()
-                // popup_div.style.height = tmp.height + 'px'
-
                 axisFormat: 'h:mm',
                 columnFormat: {
                     month: 'ddd',    // Mon
@@ -160,46 +145,9 @@
                     weekday: 'long',
                 },
                 allDaySlot: false,
-                selectHelper: true,
-                // select: function (start, end, allDay) {
-                //     let title = prompt('Event Title:');
-                //     if (title) {
-                //         calendar.fullCalendar('renderEvent',
-                //             {
-                //                 title: title,
-                //                 start: start,
-                //                 end: end,
-                //                 allDay: allDay
-                //             },
-                //             true // make the event "stick"
-                //         );
-                //     }
-                //     calendar.fullCalendar('unselect');
-                // },
-                droppable: true, // this allows things to be dropped onto the calendar !!!
-                drop: function (date, allDay) { // this function is called when something is dropped
+                selectHelper: false,
 
-                    // retrieve the dropped element's stored Event Object
-                    var originalEventObject = $(this).data('eventObject');
-
-                    // we need to copy it, so that multiple events don't have a reference to the same object
-                    var copiedEventObject = $.extend({}, originalEventObject);
-
-                    // assign it the date that was reported
-                    copiedEventObject.start = date;
-                    copiedEventObject.allDay = allDay;
-
-                    // render the event on the calendar
-                    // the last `true` argument determines if the event "sticks" (http://arshaw.com/fullcalendar/docs/event_rendering/renderEvent/)
-                    $('#calendar').fullCalendar('renderEvent', copiedEventObject, true);
-
-                    // is the "remove after drop" checkbox checked?
-                    if ($('#drop-remove').is(':checked')) {
-                        // if so, remove the element from the "Draggable Events" list
-                        $(this).remove();
-                    }
-
-                },
+                droppable: false, // this allows things to be dropped onto the calendar !!!
                 eventSources: [function (info, success, fail) {
                     $.ajax({
                         url: '/admin/events',
@@ -229,11 +177,14 @@
     </script>
 </head>
 <body>
+{% include 'base/nav.html' %}
+<hr/>
 <div id='wrap'>
 
     <div id='calendar'></div>
 
     <div style='clear:both'></div>
 </div>
+{% include 'base/footer.html' %}
 </body>
 </html>
