--- a/ssfl/templates/main/calendar.html
+++ b/ssfl/templates/main/calendar.html
@@ -13,7 +13,7 @@
             integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
             crossorigin="anonymous"></script>
 
-<!--    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>-->
+    <!--    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>-->
 
     <script type="application/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/4.2.0/core/main.js"></script>
@@ -23,6 +23,11 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i"
           rel="stylesheet">
+    <style>
+        .sst-highlight {
+            background-color: red;
+        }
+    </style>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -171,7 +176,13 @@
                     });
                 },
                 ],
-            });
+                eventRender: function (info) {
+                    // Triggers for each event - should be event after all events have been rendered (datesRender),
+                    //   but that does not appear to operate as expected (on rerender).
+                    button_state.color_buttons(info);
+                },
+        })
+            ;
             calendar.render();
         });
     </script>
