Minor - update templates and admin nav

--- a/ssfl/templates/admin/xindex.html
+++ b/ssfl/templates/admin/xindex.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-{% extends 'admin/layout.html' %}
+{% extends 'base/layout.html' %}
 
 {% block content %}
 <div class="container">
