--- a/ssfl/templates/admin/calendar.html
+++ b/ssfl/templates/admin/calendar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{% extends 'admin/layout.html' %}
+{% extends 'base/layout.html' %}
 
 {% block content %}
     <section class="container">
