--- a/ssfl/templates/admin/upload.html
+++ b/ssfl/templates/admin/upload.html
@@ -15,6 +15,7 @@
 <h2> Worry about overwriting</h2>
 <form method="post" action="/upload_file" enctype="multipart/form-data">
 	<p>
+        Input file type such as 'docx', 'jpg', ...
 		<input type="text" name="upload_type" placeholder="docx" required>
 	</p>
     <p>
