Initial baseline for IndexPages including data tables, form, manager, template

--- a/ssfl/templates/base/nav.html
+++ b/ssfl/templates/base/nav.html
@@ -86,6 +86,9 @@
                     <a class="navbar-item" href="{{ url_for('admin_bp.translate_to_html') }}">
                         Delete Page from DB
                     </a>
+                    <a class="navbar-item" href="{{ url_for('admin_bp.manage_index_page') }}">
+                        Manage Index Page
+                    </a>
                     <a class="navbar-item"
                        href="{{ url_for('main.sst_get_menu_page', page='sunnyside-resident-maps') }}">
                         Maps
