Fix duplication of events in ajax request

--- a/ssfl/templates/main/calendar.html
+++ b/ssfl/templates/main/calendar.html
@@ -185,6 +185,7 @@
             ;
             calendar.render();
         });
+        //@ sourceURL=dynamicScript.js
     </script>
 </head>
 <body>
