--- a/ssfl/templates/base/nav.html
+++ b/ssfl/templates/base/nav.html
@@ -1,115 +1,117 @@
 <!DOCTYPE html>
-<nav class="navbar" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-        <a class="navbar-item" href="https://sunnyside.cc">
-            <img src="{{ url_for('static', filename='images/NoEvil.jpg') }}" width="50" height="50">
-        </a>
-
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-           data-target="navbarBasicExample">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-        </a>
-    </div>
-
-    <div id="navbarBasicExample" class="navbar-menu">
-        <div class="navbar-start">
-            <a class="navbar-item" href="{{ url_for('main.sst_main') }}">
-                Home
+<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-3" role="navigation" aria-label="main navigation">
+    <div class="container">
+        <div class="navbar-brand mr-3">
+            <a class="navbar-item" href="https://sunnyside.cc">
+                <img src="{{ url_for('static', filename='images/NoEvil.jpg') }}" width="50" height="50">
             </a>
 
-            <a class="navbar-item" href="/main/calendar">
-                Calendar
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+               data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
             </a>
-
-            <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='activities-index') }}">
-                Activities
-            </a>
-
-            <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='cool-stories-index') }}">
-                Cool Stories
-            </a>
-
-            <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='resources-index') }}">
-                Resources
-            </a>
-
-            <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='administration-index') }}">
-                Admin
-            </a>
-
-            <div class="navbar-item has-dropdown is-hoverable">
-                <a class="navbar-link">
-                    More
-                </a>
-
-                <div class="navbar-dropdown">
-                    <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='quick-access') }}">
-                        Quick Links
-                    </a>
-                    <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='news-index') }}">
-                        News
-                    </a>
-                    <a class="navbar-item"
-                       href="{{ url_for('main.sst_get_menu_page', page='sunnyside-resident-maps') }}">
-                        Maps
-                    </a>
-                    <hr class="navbar-divider">
-                    <a class="navbar-item">
-                        Report an issue
-                    </a>
-                </div>
-            </div>
-
-             <div class="navbar-item has-dropdown is-hoverable">
-                <a class="navbar-link">
-                    Site Admin
-                </a>
-
-                <div class="navbar-dropdown">
-                    <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_edit') }}">
-                        Edit DB Page
-                    </a>
-                    <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_calendar') }}">
-                        Manage Calendar
-                    </a>
-                    <a class="navbar-item" href="{{ url_for('admin_bp.upload_form') }}">
-                        Upload DOCX File
-                    </a>
-                    <a class="navbar-item" href="{{ url_for('admin_bp.translate_to_html') }}">
-                        Translate DOCX and Add to DB
-                    </a>
-                    <a class="navbar-item" href="{{ url_for('admin_bp.translate_to_html') }}">
-                        Delete DOCX File
-                    </a>
-                    <a class="navbar-item" href="{{ url_for('admin_bp.translate_to_html') }}">
-                        Delete Page from DB
-                    </a>
-                    <a class="navbar-item" href="{{ url_for('admin_bp.manage_index_page') }}">
-                        Manage Index Page
-                    </a>
-                    <a class="navbar-item"
-                       href="{{ url_for('main.sst_get_menu_page', page='sunnyside-resident-maps') }}">
-                        Maps
-                    </a>
-                    <hr class="navbar-divider">
-                    <a class="navbar-item">
-                        Report an issue
-                    </a>
-                </div>
-            </div>
         </div>
 
-        <div class="navbar-end">
-            <div class="navbar-item">
-                <div class="buttons">
-                    {# <a class="button is-primary">#}
-                    {# <strong>Sign up</strong>#}
-                    {# </a>#}
-                    {# <a class="button is-light">#}
-                    {# Log in#}
-                    {# </a>#}
+        <div id="navbarSST" class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item" href="{{ url_for('main.sst_main') }}">
+                    Home
+                </a>
+
+                <a class="navbar-item" href="/main/calendar">
+                    Calendar
+                </a>
+
+                <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='activities-index') }}">
+                    Activities
+                </a>
+
+                <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='cool-stories-index') }}">
+                    Cool Stories
+                </a>
+
+                <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='resources-index') }}">
+                    Resources
+                </a>
+
+                <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='administration-index') }}">
+                    Admin
+                </a>
+
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link">
+                        More
+                    </a>
+
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='quick-access') }}">
+                            Quick Links
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('main.sst_get_menu_page', page='news-index') }}">
+                            News
+                        </a>
+                        <a class="navbar-item"
+                           href="{{ url_for('main.sst_get_menu_page', page='sunnyside-resident-maps') }}">
+                            Maps
+                        </a>
+                        <hr class="navbar-divider">
+                        <a class="navbar-item">
+                            Report an issue
+                        </a>
+                    </div>
+                </div>
+
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link">
+                        Site Admin
+                    </a>
+
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_edit') }}">
+                            Edit DB Page
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('admin_bp.sst_admin_calendar') }}">
+                            Manage Calendar
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('admin_bp.upload_form') }}">
+                            Upload DOCX File
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('admin_bp.translate_to_html') }}">
+                            Translate DOCX and Add to DB
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('admin_bp.translate_to_html') }}">
+                            Delete DOCX File
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('admin_bp.translate_to_html') }}">
+                            Delete Page from DB
+                        </a>
+                        <a class="navbar-item" href="{{ url_for('admin_bp.manage_index_page') }}">
+                            Manage Index Page
+                        </a>
+                        <a class="navbar-item"
+                           href="{{ url_for('main.sst_get_menu_page', page='sunnyside-resident-maps') }}">
+                            Maps
+                        </a>
+                        <hr class="navbar-divider">
+                        <a class="navbar-item">
+                            Report an issue
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <div class="buttons">
+                        {# <a class="button is-primary">#}
+                        {# <strong>Sign up</strong>#}
+                        {# </a>#}
+                        {# <a class="button is-light">#}
+                        {# Log in#}
+                        {# </a>#}
+                    </div>
                 </div>
             </div>
         </div>
